# fim

./: .gitignore  Cargo.toml  README.md  dvorak.py  shift.py  test.fimrc
docs/: crates.js  index.html  main.js  rustdoc.css  search-index.js  settings.html  source-files.js
docs/fim/: all.html  constant.LOG_FILE.html  index.html  sidebar-items.js  struct.Args.html
docs/fim/config/: enum.BindParseError.html  enum.ConfigParseError.html  index.html  sidebar-items.js  struct.Config.html
docs/fim/config_error/: enum.BindParseError.html  enum.ConfigParseError.html  index.html
docs/fim/context/: enum.ContextMessage.html  fn.context.html  index.html  sidebar-items.js  struct.Action.html  struct.CommandMode.html  struct.ContextMap.html  struct.Factory.html  struct.InsertMode.html  struct.NormalMode.html  (+1 more)
docs/libfim/: all.html  index.html  sidebar-items.js
document/: Cargo.toml
document/src/: buffer.rs  document.rs  lib.rs  ranked_tree.rs  rb_tree.rs  scapegoat_tree.rs
option_bool/: Cargo.toml
option_bool/src/: lib.rs
option_factory/: Cargo.toml
option_factory/src/: lib.rs
option_number/: Cargo.toml
option_number/src/: lib.rs
option_string/: Cargo.toml
option_string/src/: lib.rs
read_option/: Cargo.toml
read_option/src/: lib.rs
scripts/: colemak.py  lines.py
src/: config.rs  config_error.rs  context.rs  delta.rs  document.rs  editor.rs  grapheme_string.rs  layout.rs  lib.rs  main.rs  options.rs  terminal.rs  window.rs
src/config/: config_error.rs  keybinds.rs  mod.rs  options.rs
try_from_string/: Cargo.toml
try_from_string/src/: lib.rs
(+201 files in other folders)
