[package]
name = "fim"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.1"
lazy_static = "1.4.0"
unicode-segmentation = "1.7.1"

[[bin]]
name = "fim"
path = "src/main.rs"

[lib]
name = "libfim"
path = "src/lib.rs"
