[package]
name = "fim"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
option_bool = { path = "./option_bool" }
option_factory = { path = "./option_factory" }
option_number = { path = "./option_number" }
option_string = { path = "./option_string" }
read_option = { path = "./read_option" }

bincode = "1.3.3"
bitflags = "1.3.2"
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.7.1"
unicode-width = "0.1.9"

[[bin]]
name = "fim"
path = "src/main.rs"

[lib]
name = "libfim"
path = "src/lib.rs"
